load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
  name = "cict_service_auth_v1_go_proto",
  compilers = ["@io_bazel_rules_go//proto:go_grpc"],
  importpath = "github.com/cictapis/cict-auth/cict/service-auth/v1",
  protos = [
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_scope_role_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_scope_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_user_status_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:error_locale_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:locale_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:propagation_cache_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:role_accessibility_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:scope_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:session_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:workspace_user_proto",
  ],
  deps = [
    "//google/api:google_api_annotations_go_proto",
    "//cict/common/v1:cict_common_v1_go_proto",
  ],
  visibility = ["//visibility:public"]
)
