load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
  name = "cict_service_course_v1_go_proto",
  compilers = ["@io_bazel_rules_go//proto:go_grpc"],
  importpath = "github.com/cictapis/cict-auth/cict/service-course/v1",
  protos = [
    "@com_github_cict_cictapis//cict/service-course/v1:course_field_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_day_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_week_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:error_locale_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:exam_schedule_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:exam_score_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:locale_proto",
  ],
  deps = [
    "//google/api:google_api_annotations_go_proto",
    "//cict/common/v1:cict_common_v1_go_proto",
  ],
  visibility = ["//visibility:public"]
)
