load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
  name = "cict_service_reporter_v1_go_proto",
  compilers = ["@io_bazel_rules_go//proto:go_grpc"],
  importpath = "github.com/cictapis/cict-reporter/cict/service_reporter/v1;service_reporter",
  protos = [
    "@com_github_cict_cictapis//cict/service-reporter/v1:reporter_proto",
    "@com_github_cict_cictapis//cict/service-reporter/v1:template_proto"
  ],
  deps = [
    "//google/api:google_api_annotations_go_proto",
    "//cict/common/v1:cict_common_v1_go_proto",
  ],
  visibility = ["//visibility:public"]
)
