load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
  name = "grpc_lb_v1_go_proto",
  compilers = ["@io_bazel_rules_go//proto:go_grpc"],
  importpath = "github.com/cictapis/cict-auth/grpc/lb/v1",
  protos = [
    "@com_github_cict_cictapis//grpc/lb/v1:load_balancer_proto",
  ],
  deps = [],
  visibility = ["//visibility:public"]
)
