load("@rules_proto_grpc//grpc-gateway:defs.bzl", "gateway_openapiv2_compile")

gateway_openapiv2_compile(
    name = "cict_common_v1_api_gateway_grpc",
    protos = [
      "@com_github_cict_cictapis//cict/common/v1:annotations_proto",
      "@com_github_cict_cictapis//cict/common/v1:config_proto",
      "@com_github_cict_cictapis//cict/common/v1:enum_crud_policy_proto",
      "@com_github_cict_cictapis//cict/common/v1:enum_locale_proto",
      "@com_github_cict_cictapis//cict/common/v1:enum_mask_behavior_proto",
      "@com_github_cict_cictapis//cict/common/v1:enum_mutate_operation_proto",
      "@com_github_cict_cictapis//cict/common/v1:paginate_proto",
    ],
)
